Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code

Changes on version 2.0.16 (current):
- Update C++ source to version 17.01.
- Extract only selected archive items in case of solid archive.

Changes on version 2.0.14:
- Update C++ source to version 17.00.

Changes on version 2.0.13:
- Add all default (de)coders.

Changes on version 2.0.12:
- Add BCJ2 and PPMdH (de)coders.

Changes on version 2.0.10:
- Update C++ source to version 16.04.

Changes on version 2.0.9:
- Update C++ source to version 16.03.

Changes on version 2.0.8:
- Fix Cocoapod script.

Changes on version 2.0.5:
- Remove unused code.
- Use UTF8 instead of Unicode.

Changes on version 2.0.3:
- Remove redurant string conversion code.

Changes on version 2.0.2:
- Fix encode settings count.

Changes on version 2.0.1:
- Remove xz support.
- Customize all writer settings.

Changes on version 2.0.0:
- Reduce ammount of static variables.
- Error domain, e.g. `kLzmaSDKObjCErrorDomain` was changed to `LzmaSDKObjC`.
- Deprecated xz decoding, will be removed in next release.
- 7z archive writer.

Changes on version 1.1.5:
- Add error possible failure reason description.
  Use `NSLocalizedFailureReasonErrorKey` to get possible failure string.

Changes on version 1.1.4:
- Update C++ source to version 16.02.

Changes on version 1.1.3:
- Update C++ source to version 16.00.

Changes on version 1.1.2:
- Add functionality for compress/decompress single `NSData` buffer object with LZMA2.

Changes on version 1.0.7:
-  Fix Undefined value access.

Changes on version 1.0.4:
- Add nullability delegate flag to Objective-C reader.

Changes on version 1.0.3:
- Ignore debug log messages via `LZMASDKOBJC_NO_DEBUG_LOG`.

Changes on version 1.0.2:
- Move additional includes to private part of the code.

Changes on version 1.0.1:
- Lzma & lzma2 test reader.

Changes on version 1.0.0:
- Stable reader.

Changes on version 0.1.2:
- Update C++ source to version 15.14.

Changes on version 0.1.1: